--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,7 +24,7 @@ jobs:
         fetch-depth: 0
 
     - name: Run Custom Rust CI action
-      uses: .github/actions/rust/
+      uses: /.github/actions/rust/
       with: 
         github_token: ${{ secrets.GITHUB_TOKEN }}
         gitleaks_token: ${{ secrets.GITLEAKS_TOKEN }}
