fix(actions): slight fix

--- a/.github/actions/rust/action.yml
+++ b/.github/actions/rust/action.yml
@@ -52,7 +52,7 @@ runs:
       shell: bash
     
     - name: Run tests in release mode
-      run: cargo test --profile release --verbose cargo test 
+      run: cargo test --profile release --verbose --workspace
       shell: bash
 
     - name: SonarCloud Scan
