--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,7 +3,7 @@ name: Rust CI Pipeline
 on: [push, pull_request]
 
 env:
-  DOCKER_IMAGE_NAME: "rust-template"
+  DOCKER_IMAGE_NAME: ""
   SONAR_ORGANIZATION: "geoderp"
   SONAR_PROJECT_KEY: "GeoDerp_rust-template"
   PROJECT_DIR: "."
@@ -35,4 +35,4 @@ jobs:
           -D sonar.sources=${{ env.PYTHON_APP_SOURCE_DIR }}
         dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
         dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
-        docker_image_name: ${{ env.DOCKER_IMAGE_NAME }}
+        docker_image_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
