--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,10 +7,26 @@
         "ms-vscode-remote.remote-containers",
         "ms-azuretools.vscode-docker",
         // Sonar 
-        "SonarSource.sonarlint-vscode",
-        // Trivy
+        "Semgrep.semgrep",
+        // Trivy 
         "AquaSecurityOfficial.trivy-vulnerability-scanner",
-        // Github
+        //Github - git
         "GitHub.vscode-github-actions",
+        "eamodio.gitlens",
+        "bierner.markdown-mermaid",
+        // YAML / XML / CSV / Markdown
+        "redhat.vscode-yaml",
+        "redhat.vscode-xml",
+        "mechatroner.rainbow-csv",
+        // CSS / HTML 
+        "ecmel.vscode-html-css",
+        // prettier
+        "esbenp.prettier-vscode",
+        // .editorconfig 
+        "editorconfig.editorconfig",
+        // spelling 
+        "streetsidesoftware.code-spell-checker"
     ]
 }
+
+
