--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,11 @@
 {
-    "dev.containers.dockerPath": "podman",
-    "files.autoSaveWhenNoErrors": true,
-    "files.autoSaveWorkspaceFilesOnly": true,
-    "dev.containers.dockerComposePath": "podman-compose",
-    "docker.commands.composeUp": [
-        {
-            "label": "Compose Up",
-            "template": "${composeCommand} ${configurationFile} up ${detached} ${build}"
-        }
-    ],
-    "trivy.offlineScan": true
+    // add to user settings if needed 
+    // "dev.containers.dockerPath": "podman",
+    // "dev.containers.dockerComposePath": "podman-compose",
+    // "docker.commands.composeUp": [
+    //     {
+    //         "label": "Compose Up",
+    //         "template": "${composeCommand} ${configurationFile} up ${detached} ${build}"
+    //     }
+    // ],
 }
